[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardllm-safety"
version = "0.1.0"
description = "A Responsible AI toolkit for LLM applications providing safety, governance, and observability features"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "GuardLLM Contributors", email = "info@guardllm.dev"}
]
keywords = [
    "llm",
    "safety",
    "security",
    "governance",
    "observability",
    "responsible-ai",
    "prompt-injection",
    "pii-detection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/jasoncobra3/GuardLLM"
Documentation = "https://guardllm.readthedocs.io"
Repository = "https://github.com/jasoncobra3/GuardLLM.git"
Issues = "https://github.com/jasoncobra3/GuardLLM/issues"
Changelog = "https://github.com/jasoncobra3/GuardLLM/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]
all = []

[tool.setuptools]
packages = ["guardllm"]

[tool.setuptools.package-dir]
guardllm = "guardllm"

[tool.setuptools.package-data]
guardllm = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    ".tox",
    "venv",
    ".venv",
    "build",
    "dist",
    "migrations",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "U",    # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "W191",  # indentation contains tabs
    "C901",  # function is too complex
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["guardllm"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
